[gd_scene load_steps=3 format=3 uid="uid://profile_creation_001"]

[ext_resource type="Script" path="res://scripts/ui/profile_creation.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.14, 0.2, 0.98)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
content_margin_left = 40.0
content_margin_top = 32.0
content_margin_right = 40.0
content_margin_bottom = 32.0

[node name="ProfileCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 0.95)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -360.0
offset_right = 320.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ðŸŽ® Willkommen bei New Quiz on the Block!"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Erstelle dein Spielerprofil"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Dein Name:"

[node name="NameInput" type="LineEdit" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Gib deinen Namen ein..."
max_length = 20

[node name="AvatarLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "WÃ¤hle deinen Avatar:"

[node name="AvatarContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="GradeLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Deine Klassenstufe:"

[node name="GradeContainer" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 6

[node name="CategoryLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quiz-Kategorien:"

[node name="CategoryContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ErrorLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Fehler"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "ðŸš€ Spiel starten!"

